Fix - CSS: `compact` style could have the column title overlapping the sorting indicator
Fixes DataTables/DataTables #527

--- a/css/jquery.dataTables.scss
+++ b/css/jquery.dataTables.scss
@@ -279,17 +279,17 @@ table.dataTable {
 	&.compact {
 		thead th,
 		thead td {
-			padding: 5px 9px;
+			padding: 4px 17px 4px 4px;
 		}
 
 		tfoot th,
 		tfoot td {
-			padding: 5px 9px 3px 9px;
+			padding: 4px;
 		}
 
 		tbody th,
 		tbody td {
-			padding: 4px 5px;
+			padding: 4px;
 		}
 	}
 
